# zahn-versteher-portal

./: .env.example  .env.production  .gitignore  CLAUDE.md  README.md  docker-compose.yml  index.html  pyproject.toml  tailwind.config.ts
.lovable/: plan.md
app/: config.py  db.py  main.py
app/queue/: handlers.py  jobs.py  worker.py
app/routes/: form.py  health.py  whatsapp.py
app/scripts/: gmail_authorize.py
app/services/: anthropic_client.py  gmail_client.py  meta_webhook.py  normalize.py  whatsapp_client.py
db/init/: 01_schema.sql  02_jobs.sql
src/: index.css
src/components/: AssistantPanel.tsx  EnvPing.tsx  LegalLayout.tsx  MultiStepForm.tsx  WhatsAppButton.tsx  WhatsAppIcon.tsx
src/lib/: leadTracking.ts  whatsapp.ts
src/pages/: Datenschutz.tsx  Impressum.tsx  Index.tsx
supabase/: config.toml
